--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,6 +53,7 @@ jobs:
     if: github.repository == 'gyselax/gyselalibxx'
     with:
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
+      SHA: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.pull_request.number }}
       is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
     secrets: inherit
