--- a/.github/workflows/cpu_tests.yml
+++ b/.github/workflows/cpu_tests.yml
@@ -49,21 +49,21 @@ jobs:
     name: CPU Test (${{ inputs.toolchain }})
     steps:
       - name: Checkout gyselalibxx
-        if: ${{ (! inputs.is_duplicate) || true }}
+        if: ${{ ! inputs.is_duplicate }}
         uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: "Filter tests"
-        if: ${{ (! inputs.is_duplicate) || true }}
+        if: ${{ ! inputs.is_duplicate }}
         uses: ./.github/actions/test_filter
         with:
           base_sha: ${{ inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: Build code
-        if: ${{ (! inputs.is_duplicate) || true }}
+        if: ${{ ! inputs.is_duplicate }}
         uses: ./.github/actions/build_code
         with:
           toolchain: toolchains/docker.gyselalibxx_env/${{ inputs.toolchain }}.cmake
       - name: Run tests
-        if: ${{ (! inputs.is_duplicate) || true }}
+        if: ${{ ! inputs.is_duplicate }}
         uses: ./.github/actions/run_tests
