--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,19 +53,15 @@ jobs:
     if: github.repository == 'gyselax/gyselalibxx'
     with:
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
+      SHA: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.pull_request.number }}
       is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
+    secrets: inherit
 
   set_draft_failing:
     runs-on: ubuntu-latest
     needs: [cpu_tests, gpu_tests]
     if: github.event_name == 'pull_request' && failure()
-    permissions:
-      contents: read
-      packages: read
-      pull-requests: write
-      repository-projects: read
-      issues: write
     steps:
       - uses: actions/checkout@v4
       - name: Set PR to draft to avoid unnecessary runs
@@ -89,12 +85,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [cpu_tests, gpu_tests]
     if: github.event_name == 'pull_request' && cancelled()
-    permissions:
-      contents: read
-      packages: read
-      pull-requests: write
-      repository-projects: read
-      issues: write
     steps:
       - uses: actions/checkout@v4
       - name: Set PR to draft to avoid unnecessary runs
@@ -118,12 +108,6 @@ jobs:
     needs: [cpu_tests, gpu_tests]
     name: Set PR labels
     if: github.event_name == 'pull_request' && success() && github.repository == 'gyselax/gyselalibxx'
-    permissions:
-      contents: read
-      packages: read
-      pull-requests: write
-      repository-projects: read
-      issues: write
 
     steps:
       - uses: actions/checkout@v4
@@ -139,5 +123,6 @@ jobs:
               gh pr edit ${{ github.event.pull_request.number }} --add-label "Ready to review"
             fi
           fi
+        shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
