--- a/tests/data_types/CMakeLists.txt
+++ b/tests/data_types/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(unit_tests_data_types
     deriv_field.cpp
     device_host_t.cpp
     field.cpp
+    tensor.cpp
     ../main.cpp
 )
 target_link_libraries(unit_tests_data_types
