--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -55,7 +55,7 @@ jobs:
           git config --global user.email "username@users.noreply.github.com"
           echo "${GITHUB_REPOSITORY}" > repo
           echo "${{ inputs.SHA || github.sha }}" > commit
-          git commit -m "Test commit ${GITHUB_SHA}" repo commit
+          git commit -m "Test commit ${{ inputs.SHA || github.sha }}" repo commit
           git push
         shell: bash
         env:
