Add missing GH_TOKEN to correctly remove flags

--- a/.github/workflows/draft_flags.yml
+++ b/.github/workflows/draft_flags.yml
@@ -15,3 +15,6 @@ jobs:
           ref: main
       - run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
+        shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
