--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,6 @@ on:
       - reopened
       - synchronize
       - ready_for_review
-      - labeled
   merge_group:
     types:
       - checks_requested
@@ -16,10 +15,7 @@ jobs:
   pre_job:
     name: 'Check for unnecessary runs'
     runs-on: ubuntu-latest
-    if: |
-      (github.repository == 'gyselax/gyselalibxx' && github.event.action != 'labeled' && github.event.pull_request.draft == false) ||
-      (github.repository != 'gyselax/gyselalibxx' && github.event.action == 'labeled' && github.event.label.name == 'Ready to review') ||
-      (github.repository != 'gyselax/gyselalibxx' && github.event.action != 'labeled' && contains(github.event.pull_request.labels.*.name, 'Ready to review'))
+    if: github.repository == 'gyselax/gyselalibxx' && github.event.pull_request.draft == false
     # Map a step output to a job output
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
@@ -67,7 +63,7 @@ jobs:
       - name: Set PR to draft to avoid unnecessary runs
         if: github.repository == 'gyselax/gyselalibxx'
         run: |
-          isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
+          isDraft=${{ github.event.pull_request.draft }}
           if [ "${isDraft}" != "true" ]
           then
             if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
@@ -89,7 +85,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set PR to draft to avoid unnecessary runs
         run: |
-          isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
+          isDraft=${{ github.event.pull_request.draft }}
           if [ "${isDraft}" != "true" ]
           then
             if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
@@ -98,30 +94,6 @@ jobs:
             fi
             gh pr comment ${{ github.event.pull_request.number }} -b "It seems like you haven't finished working on this PR so it has been put back into draft. Please remove the draft status when the PR can run tests without being interrupted."
             gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
-          fi
-        shell: bash
-        env:
-          GH_TOKEN: ${{ github.token }}
-
-  set_labels:
-    runs-on: ubuntu-latest
-    needs: [cpu_tests, gpu_tests]
-    name: Set PR labels
-    if: github.event_name == 'pull_request' && success() && github.repository == 'gyselax/gyselalibxx'
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set PR labels for reviews
-        run: |
-          if [ "${{ github.event.pull_request.draft }}" != "true" ]
-          then
-            STATES=$(gh pr checks ${{ github.event.pull_request.number }} --required --json state)
-            N_PASSES=$(echo $STATES | grep -o "\"state\":\"SUCCESS\"" | wc -l)
-            if [[ ${N_PASSES} == 10 ]]
-            then
-              # If all required tests are passing then mark as ready to review
-              gh pr edit ${{ github.event.pull_request.number }} --add-label "Ready to review"
-            fi
           fi
         shell: bash
         env:
