--- a/tests/geometryRTheta/advection_field_rp/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_field_rp/CMakeLists.txt
@@ -40,7 +40,9 @@ function (advection_field_test_executable SIMULATION)
             gslx::simulation_utils
     )
     target_compile_definitions("${test_name_gtest}" PUBLIC -D${SIMULATION})    
-    gtest_discover_tests("${test_name_gtest}" DISCOVERY_MODE PRE_TEST)
+    gtest_discover_tests("${test_name_gtest}"
+        TEST_SUFFIX ${SIMULATION}
+        DISCOVERY_MODE PRE_TEST)
 endfunction()
 
 # Select the parameters of the simulation: 
