--- a/tests/geometryRTheta/CMakeLists.txt
+++ b/tests/geometryRTheta/CMakeLists.txt
@@ -8,5 +8,5 @@ if("${POISSON_2D_BUILD_TESTING}")
 endif()
 add_subdirectory(2d_spline_interpolator)
 add_subdirectory(quadrature)
-add_subdirectory(advection_2d_rp)
-add_subdirectory(advection_field_rp)
+add_subdirectory(advection_2d_rtheta)
+add_subdirectory(advection_field_rtheta)
