--- a/simulations/geometryRTheta/diocotron/CMakeLists.txt
+++ b/simulations/geometryRTheta/diocotron/CMakeLists.txt
@@ -31,7 +31,7 @@ function (diocotron_executable PREDCORR_METHOD TIME_METHOD )
             gslx::geometry_RTheta
             gslx::interpolation_2D_rp
             gslx::io
-            gslx::advection_rp
+            gslx::advection_polar
             gslx::time_integration_rp
             gslx::quadrature
             gslx::utils
