--- a/tests/geometryRTheta/advection_2d_rp/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_2d_rp/CMakeLists.txt
@@ -35,7 +35,7 @@ foreach(MAPPING_TYPE "CIRCULAR_MAPPING_PHYSICAL" "CZARNY_MAPPING_PHYSICAL" "CZAR
                 Eigen3::Eigen
 
 
-                gslx::advection_polar
+                gslx::advection_rp
                 gslx::geometry_RTheta
                 gslx::interpolation_2D_rp
                 gslx::io
@@ -74,7 +74,7 @@ target_link_libraries(advection_ALL
 		Eigen3::Eigen
 
 
-		gslx::advection_polar
+		gslx::advection_rp
 		gslx::geometry_RTheta
 		gslx::interpolation_2D_rp
 		gslx::io
