--- a/.typos.toml
+++ b/.typos.toml
@@ -1,6 +1,8 @@
-locale = 'en-gb'
+[default.locale]
+en-gb
 
 [default.extend-words]
 # Don't correct these word (parts)
 iy = "iy"
 ND = "ND"
+Strang = "Strang"
