--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -186,4 +186,4 @@ jobs:
     - name: Spell Check Repo
       uses: crate-ci/typos@v1.29.10
       with:
-        files: ./AUTHORS ./CMakeLists.txt ./docs/ ./README.md ./simulations ./src ./tests/
+        files: ./AUTHORS ./CMakeLists.txt ./docs/ ./post-process ./README.md ./simulations ./src ./tests/
