Make sure postproc/ folder complies with spell checker (#135)

--- a/.typos.toml
+++ b/.typos.toml
@@ -6,6 +6,7 @@ extend-ignore-re = ["capitalize()",
                     "ddc::\\S*",
                     "gko_exec->\\S*",
                     "on_finalize:",
+                    "colors.Normalize"
                     ]
 
 [default.extend-words]
