--- a/simulations/geometryXYVxVy/landau/CMakeLists.txt
+++ b/simulations/geometryXYVxVy/landau/CMakeLists.txt
@@ -7,17 +7,18 @@ target_link_libraries(landau4d_fft
         DDC::pdi
         paraconf::paraconf
         PDI::pdi
-        gslx::paraconfpp
+        gslx::advection
         gslx::geometry_xyvxvy
         gslx::initialisation_xyvxvy
         gslx::interpolation
         gslx::io
-        gslx::advection
-        gslx::vlasov_xyvxvy
+        gslx::mpi_parallelisation
+        gslx::paraconfpp
         gslx::poisson_xy
         gslx::quadrature
         gslx::time_integration_xyvxvy
         gslx::utils
+        gslx::vlasov_xyvxvy
 )
 
 install(TARGETS landau4d_fft)
