--- a/src/geometryXYVxVy/vlasov/CMakeLists.txt
+++ b/src/geometryXYVxVy/vlasov/CMakeLists.txt
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: MIT
 
 add_library("vlasov_xyvxvy" STATIC
+    mpisplitvlasovsolver.cpp
     splitvlasovsolver.cpp
 )
 
@@ -11,9 +12,10 @@ target_include_directories("vlasov_xyvxvy"
 target_link_libraries("vlasov_xyvxvy"
     PUBLIC
         DDC::core
-        gslx::speciesinfo
-        gslx::geometry_xyvxvy
         gslx::advection
+        gslx::geometry_xyvxvy
+        gslx::mpi_parallelisation
+        gslx::speciesinfo
 )
 
 add_library("gslx::vlasov_xyvxvy" ALIAS "vlasov_xyvxvy")
