--- a/src/geometryRTheta/time_solver/CMakeLists.txt
+++ b/src/geometryRTheta/time_solver/CMakeLists.txt
@@ -1,23 +1,23 @@
 # SPDX-License-Identifier: MIT
 
 
-add_library(time_integration_rp INTERFACE)
-target_include_directories(time_integration_rp
+add_library(time_integration_rtheta INTERFACE)
+target_include_directories(time_integration_rtheta
     INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-target_link_libraries(time_integration_rp 
+target_link_libraries(time_integration_rtheta 
     INTERFACE
         DDC::core
         Eigen3::Eigen
-        gslx::interpolation_2D_rp
+        gslx::interpolation_polar
         gslx::geometry_RTheta
         gslx::poisson_RTheta
-        gslx::advection_rp
+        gslx::advection_polar
         gslx::utils
         gslx::timestepper
         gslx::advection_field_RTheta
 )
-add_library(gslx::time_integration_rp ALIAS time_integration_rp)
+add_library(gslx::time_integration_rtheta ALIAS time_integration_rtheta)
 
             
