--- a/tests/geometryRTheta/advection_field_rtheta/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_field_rtheta/CMakeLists.txt
@@ -31,9 +31,9 @@ function (advection_field_test_executable SIMULATION)
             
             gslx::poisson_RTheta
             gslx::geometry_RTheta
-            gslx::interpolation_2D_rp
-            gslx::advection_rp
-            gslx::time_integration_rp
+            gslx::interpolation_polar
+            gslx::advection_polar
+            gslx::time_integration_rtheta
             gslx::quadrature
             gslx::utils
             gslx::diocotron_init_eq
