--- a/src/geometryRTheta/advection/CMakeLists.txt
+++ b/src/geometryRTheta/advection/CMakeLists.txt
@@ -1,20 +1,20 @@
 # SPDX-License-Identifier: MIT
 
-add_library(advection_rtheta INTERFACE)
-target_include_directories(advection_rtheta
+add_library(advection_RTheta INTERFACE)
+target_include_directories(advection_RTheta
     INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-target_link_libraries(advection_rtheta 
+target_link_libraries(advection_RTheta 
     INTERFACE
         DDC::core
         Eigen3::Eigen
         gslx::advection
         gslx::data_types
         gslx::geometry_RTheta
-        gslx::interpolation_rtheta
+        gslx::interpolation_RTheta
         gslx::mapping
         gslx::math_tools
         gslx::utils
 )
-add_library(gslx::advection_rtheta ALIAS advection_rtheta)
+add_library(gslx::advection_RTheta ALIAS advection_RTheta)
