--- a/src/geometryRTheta/interpolation/CMakeLists.txt
+++ b/src/geometryRTheta/interpolation/CMakeLists.txt
@@ -1,14 +1,14 @@
 # SPDX-License-Identifier: MIT
 
 
-add_library("interpolation_rtheta" INTERFACE
+add_library("interpolation_RTheta" INTERFACE
 )
 
-target_include_directories("interpolation_rtheta"
+target_include_directories("interpolation_RTheta"
     INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-target_link_libraries("interpolation_rtheta"
+target_link_libraries("interpolation_RTheta"
     INTERFACE
         DDC::core
         gslx::geometry_RTheta
@@ -16,4 +16,4 @@ target_link_libraries("interpolation_rtheta"
 
 )
 
-add_library("gslx::interpolation_rtheta" ALIAS "interpolation_rtheta")
+add_library("gslx::interpolation_RTheta" ALIAS "interpolation_RTheta")
