forgotten time_integration_rtheta -> _RTheta

--- a/src/geometryRTheta/time_solver/CMakeLists.txt
+++ b/src/geometryRTheta/time_solver/CMakeLists.txt
@@ -1,12 +1,12 @@
 # SPDX-License-Identifier: MIT
 
 
-add_library(time_integration_rtheta INTERFACE)
-target_include_directories(time_integration_rtheta
+add_library(time_integration_RTheta INTERFACE)
+target_include_directories(time_integration_RTheta
     INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-target_link_libraries(time_integration_rtheta 
+target_link_libraries(time_integration_RTheta 
     INTERFACE
         DDC::core
         Eigen3::Eigen
@@ -18,6 +18,6 @@ target_link_libraries(time_integration_rtheta
         gslx::timestepper
         gslx::advection_field_RTheta
 )
-add_library(gslx::time_integration_rtheta ALIAS time_integration_rtheta)
+add_library(gslx::time_integration_RTheta ALIAS time_integration_RTheta)
 
             
