--- a/simulations/geometryXYVxVy/landau/ref_simulation/landau_ref.yaml
+++ b/simulations/geometryXYVxVy/landau/ref_simulation/landau_ref.yaml
@@ -1,8 +1,4 @@
-// SPDX-License-Identifier: MIT
-
-#pragma once
-
-constexpr char const* const params_yaml = R"PDI_CFG(SplineMesh:
+SplineMesh:
   x_min: 0.0
   x_max: 12.56637061435917
   x_ncells: 64
@@ -31,4 +27,3 @@ Algorithm:
 
 Output:
   time_diag: 0.25
-)PDI_CFG";
